# Destructor
executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Iterators
executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Modifiers
executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
