ex_zk_slist_concat = executable('concat', sources: ['concat.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_copy = executable('copy', sources: ['copy.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_copy_deep = executable('copy_deep', sources: ['copy_deep.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_delete_node = executable('delete_node', sources: ['delete_node.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_find = executable('find', sources: ['find.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_index = executable('index', sources: ['index.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_insert = executable('insert', sources: ['insert.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_insert_before = executable('insert_before', sources: ['insert_before.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_last = executable('last', sources: ['last.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_length = executable('length', sources: ['length.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_nth = executable('nth', sources: ['nth.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_reverse = executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Destructor
ex_zk_slist_free = executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Interators
ex_zk_slist_for_each = executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])


# Modifiers
ex_zk_slist_push_back = executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
ex_zk_slist_push_front = executable('push_front', sources: ['push_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

