executable('concat', sources: ['concat.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('copy', sources: ['copy.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('copy_deep', sources: ['copy_deep.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('delete_node', sources: ['delete_node.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('find', sources: ['find.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('index', sources: ['index.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('insert', sources: ['insert.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('insert_before', sources: ['insert_before.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('last', sources: ['last.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('length', sources: ['length.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('nth', sources: ['nth.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Destructor
executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Interators
executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])


# Modifiers
executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('push_front', sources: ['push_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

