# Destructor
executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

# Interators
executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])


# Modifiers
executable('pop_back', sources: ['pop_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('pop_front', sources: ['pop_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('push_front', sources: ['push_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])

executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
executable('length', sources: ['length.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
