test_zk_slist_reverse = \
    executable(
        'test_zk_slist_reverse',
        sources: ['test_zk_slist_reverse.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_size = \
    executable(
        'test_zk_slist_size',
        sources: ['test_zk_slist_size.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_merge = \
    executable(
        'test_zk_slist_merge',
        sources: ['test_zk_slist_merge.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_sort = \
    executable(
        'test_zk_slist_sort',
        sources: ['test_zk_slist_sort.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_find = \
    executable(
        'test_zk_slist_find',
        sources: ['test_zk_slist_find.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_find_index = \
    executable(
        'test_zk_slist_find_index',
        sources: ['test_zk_slist_find_index.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_push_front = \
    executable(
        'test_zk_slist_push_front',
        sources: ['test_zk_slist_push_front.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_push_back = \
    executable(
        'test_zk_slist_push_back',
        sources: ['test_zk_slist_push_back.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_pop_front = \
    executable(
        'test_zk_slist_pop_front',
        sources: ['test_zk_slist_pop_front.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_pop_back = \
    executable(
        'test_zk_slist_pop_back',
        sources: ['test_zk_slist_pop_back.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_new_node = \
    executable(
        'test_zk_slist_new_node',
        sources: ['test_zk_slist_new_node.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_begin = \
    executable(
        'test_zk_slist_begin',
        sources: ['test_zk_slist_begin.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_end = \
    executable(
        'test_zk_slist_end',
        sources: ['test_zk_slist_end.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_for_each = \
    executable(
        'test_zk_slist_for_each',
        sources: ['test_zk_slist_for_each.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test_zk_slist_free = \
    executable(
        'test_zk_slist_free',
        sources: ['test_zk_slist_free.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )

test('test_zk_slist_reverse', test_zk_slist_reverse, suite: 'zk_slist')
test('test_zk_slist_size', test_zk_slist_size, suite: 'zk_slist')
test('test_zk_slist_merge', test_zk_slist_merge, suite: 'zk_slist')
test('test_zk_slist_sort', test_zk_slist_sort, suite: 'zk_slist')
test('test_zk_slist_find', test_zk_slist_find, suite: 'zk_slist')
test('test_zk_slist_find_index', test_zk_slist_find_index, suite: 'zk_slist')
test('test_zk_slist_push_front', test_zk_slist_push_front, suite: 'zk_slist')
test('test_zk_slist_push_back', test_zk_slist_push_back, suite: 'zk_slist')
test('test_zk_slist_pop_front', test_zk_slist_pop_front, suite: 'zk_slist')
test('test_zk_slist_pop_back', test_zk_slist_pop_back, suite: 'zk_slist')
test('test_zk_slist_new_node', test_zk_slist_new_node, suite: 'zk_slist')
test('test_zk_slist_begin', test_zk_slist_begin, suite: 'zk_slist')
test('test_zk_slist_end', test_zk_slist_end, suite: 'zk_slist')
test('test_zk_slist_for_each', test_zk_slist_for_each, suite: 'zk_slist')
test('test_zk_slist_free', test_zk_slist_free, suite: 'zk_slist')

