# test_zk_vec_capacity = \
#     executable(
#         'test_zk_vec_capacity',
#         sources: ['test_zk_vec_capacity.c'],
#         dependencies: [ unity_dep, zklib_dep ],
#         include_directories : [inc_dir]
#     )
# test('test_zk_vec_capacity', test_zk_vec_capacity, suite: 'zk_vec')

# test_zk_vec_free = \
#     executable(
#         'test_zk_vec_free',
#         sources: ['test_zk_vec_free.c'],
#         dependencies: [ unity_dep, zklib_dep ],
#         include_directories : [inc_dir]
#     )
# test('test_zk_vec_free', test_zk_vec_free, suite: 'zk_vec')

test_zk_vec_new = \
    executable(
        'test_zk_vec_new',
        sources: ['test_zk_vec_new.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vec_new', test_zk_vec_new, suite: 'zk_vec')


# test_zk_vec_pop_back = \
#     executable(
#         'test_zk_vec_pop_back',
#         sources: ['test_zk_vec_pop_back.c'],
#         dependencies: [ unity_dep, zklib_dep ],
#         include_directories : [inc_dir]
#     )
# test('test_zk_vec_pop_back', test_zk_vec_pop_back, suite: 'zk_vec')

# test_zk_vec_pop_front = \
#     executable(
#         'test_zk_vec_pop_front',
#         sources: ['test_zk_vec_pop_front.c'],
#         dependencies: [ unity_dep, zklib_dep ],
#         include_directories : [inc_dir]
#     )
# test('test_zk_vec_pop_front', test_zk_vec_pop_front, suite: 'zk_vec')

test_zk_vec_push_back = \
    executable(
        'test_zk_vec_push_back',
        sources: ['test_zk_vec_push_back.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vec_push_back', test_zk_vec_push_back, suite: 'zk_vec')

# test_zk_vec_push_front = \
#     executable(
#         'test_zk_vec_push_front',
#         sources: ['test_zk_vec_push_front.c'],
#         dependencies: [ unity_dep, zklib_dep ],
#         include_directories : [inc_dir]
#     )
# test('test_zk_vec_push_front', test_zk_vec_push_front, suite: 'zk_vec')


# test_zk_vec_size = \
#     executable(
#         'test_zk_vec_size',
#         sources: ['test_zk_vec_size.c'],
#         dependencies: [ unity_dep, zklib_dep ],
#         include_directories : [inc_dir]
#     )
# test('test_zk_vec_size', test_zk_vec_size, suite: 'zk_vec')

#  Iterator tests
test_zk_vec_begin_end = \
    executable(
        'test_zk_vec_begin_end',
        sources: ['test_zk_vec_begin_end.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vec_begin_end', test_zk_vec_begin_end, suite: 'zk_vec')
