test_zk_vector_capacity = \
    executable(
        'test_zk_vector_capacity',
        sources: ['test_zk_vector_capacity.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vector_capacity', test_zk_vector_capacity, suite: 'zk_vector')

test_zk_vector_data = \
    executable(
        'test_zk_vector_data',
        sources: ['test_zk_vector_data.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vector_data', test_zk_vector_data, suite: 'zk_vector')

test_zk_vector_free = \
    executable(
        'test_zk_vector_free',
        sources: ['test_zk_vector_free.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vector_free', test_zk_vector_free, suite: 'zk_vector')

test_zk_vector_new = \
    executable(
        'test_zk_vector_new',
        sources: ['test_zk_vector_new.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vector_new', test_zk_vector_new, suite: 'zk_vector')

test_zk_vector_push_back = \
    executable(
        'test_zk_vector_push_back',
        sources: ['test_zk_vector_push_back.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vector_push_back', test_zk_vector_push_back, suite: 'zk_vector')

test_zk_vector_size = \
    executable(
        'test_zk_vector_size',
        sources: ['test_zk_vector_size.c'],
        dependencies: [ unity_dep, zklib_dep ],
        include_directories : [inc_dir]
    )
test('test_zk_vector_size', test_zk_vector_size, suite: 'zk_vector')
